--- a/freelancer-service/src/main/resources/static/index.html
+++ b/freelancer-service/src/main/resources/static/index.html
@@ -22,13 +22,13 @@
     <!-- Load AngularJS -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script type="text/javascript">
-      var app = angular.module("FruitManagement", []);
+      var app = angular.module("FreelancerManagement", []);
 
       //Controller Part
-      app.controller("FruitManagementController", function ($scope, $http) {
+      app.controller("FreelancerManagementController", function ($scope, $http) {
 
         //Initialize page with default data which is blank in this example
-        $scope.fruits = [];
+        $scope.freelancers = [];
 
         $scope.form = {
           id: -1,
@@ -47,12 +47,12 @@
             //Id is absent so add fruits - POST operation
             method = "POST";
             url = '/api/fruits';
-            data.name = $scope.form.name;
+            data.firstName = $scope.form.firstName;
           } else {
             //If Id is present, it's edit operation - PUT operation
             method = "PUT";
-            url = '/api/fruits/' + $scope.form.id;
-            data.name = $scope.form.name;
+            url = '/api/freelancers/' + $scope.form.id;
+            data.firstName = $scope.form.firstName;
           }
 
           $http({
@@ -69,22 +69,22 @@
         $scope.remove = function (fruit) {
           $http({
             method: 'DELETE',
-            url: '/api/fruits/' + fruit.id
+            url: '/api/freelancers/' + fruit.id
           }).then(_success, _error);
         };
 
         //In case of edit fruits, populate form with fruit data
-        $scope.edit = function (fruit) {
-          $scope.form.name = fruit.name;
-          $scope.form.id = fruit.id;
+        $scope.edit = function (freelancer) {
+          $scope.form.firstName = freelancer.firstName;
+          $scope.form.id = freelancer.id;
         };
 
           /* Private Methods */
-        //HTTP GET- get all fruits collection
+        //HTTP GET- get all freelancers collection
         function _refreshPageData() {
           $http({
             method: 'GET',
-            url: '/api/fruits'
+            url: '/api/freelancers'
           }).then(function successCallback(response) {
             $scope.fruits = response.data;
           }, function errorCallback(response) {
@@ -103,36 +103,36 @@
 
         //Clear the form
         function _clearForm() {
-          $scope.form.name = "";
+          $scope.form.firstName = "";
           $scope.form.id = -1;
         }
       });
     </script>
 </head>
-<body ng-app="FruitManagement" ng-controller="FruitManagementController">
+<body ng-app="FreelancerManagement" ng-controller="FreelancerManagementController">
 
 <div class="container">
     <h1>CRUD Mission - Spring Boot</h1>
     <p>
-        This application demonstrates how a Spring Boot application implements a CRUD endpoint to manage <em>fruits</em>.
-        This management interface invokes the CRUD service endpoint, that interact with a ${db.name} database using JDBC.
+        This application demonstrates how a Spring Boot application implements a CRUD endpoint to manage <em>freelancers</em>.
+        This management interface invokes the CRUD service endpoint, that interact with a ${db.firstName} database using JDBC.
     </p>
 
-    <h3>Add/Edit a fruit</h3>
+    <h3>Add/Edit a freelancer</h3>
     <form ng-submit="update()">
         <div class="row">
-            <div class="col-6"><input type="text" placeholder="Name" ng-model="form.name" size="60"/></div>
+            <div class="col-6"><input type="text" placeholder="Name" ng-model="form.firstName" size="60"/></div>
         </div>
         <input type="submit" value="Save"/>
     </form>
 
-    <h3>Fruit List</h3>
+    <h3>Freelancer List</h3>
     <div class="row">
         <div class="col-2">Name</div>
     </div>
-    <div class="row" ng-repeat="fruit in fruits">
-        <div class="col-2">{{ fruit.name }}</div>
-        <div class="col-8"><a ng-click="edit( fruit )" class="btn">Edit</a> <a ng-click="remove( fruit )" class="btn">Remove</a>
+    <div class="row" ng-repeat="freelancer in freelancers">
+        <div class="col-2">{{ freelancer.firstName }}</div>
+        <div class="col-8"><a ng-click="edit( freelancer )" class="btn">Edit</a> <a ng-click="remove( freelancer )" class="btn">Remove</a>
         </div>
     </div>
 </div>
